syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-shopping-list/api/proto/v1";

import "google/protobuf/timestamp.proto";

message GetSharedShoppingListLinkRequest {
  string shoppingListId = 1;
  string requesterId = 2;
  string linkPattern = 3;
}

message GetSharedShoppingListLinkResponse {
  string link = 1;
  google.protobuf.Timestamp expiresAt = 2;
}
